--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sleep-tracker",
   "dependencies": {
+    "big-red-button": "0.0.11",
     "debug-error-middleware": "^1.3.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
