--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "big-red-button": "0.0.11",
     "debug-error-middleware": "^1.3.0",
     "express": "^4.17.1",
+    "express-pouchdb": "^4.2.0",
     "moment": "^2.24.0",
     "named-routes": "^2.0.7",
     "nunjucks": "^3.2.0",
-    "pouchdb": "^7.2.1"
+    "pouchdb": "^7.2.1",
+    "pouchdb-find": "^7.2.1"
   }
 }
