--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.17.1",
     "express-pouchdb": "^4.2.0",
     "moment": "^2.24.0",
+    "moment-duration-format": "^2.3.2",
     "named-routes": "^2.0.7",
     "nunjucks": "^3.2.0",
     "pouchdb": "^7.2.1",
