--- a/config.json
+++ b/config.json
@@ -3,8 +3,5 @@
   "debug": true,
   "locale": "en-US",
   "dbPath": "/home/ben/.local/share/pouchdb",
-  "dbName": "sleeplog",
-  "couchdb": {
-    "uuid": "7e365159-3dee-4e06-a078-66e315714b70"
-  }
+  "dbName": "sleeplog"
 }
