--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sleep-tracker",
   "dependencies": {
     "big-red-button": "0.0.11",
+    "browserify": "^16.5.0",
     "debug-error-middleware": "^1.3.0",
     "express": "^4.17.1",
     "express-pouchdb": "^4.2.0",
@@ -10,6 +11,24 @@
     "named-routes": "^2.0.7",
     "nunjucks": "^3.2.0",
     "pouchdb": "^7.2.1",
-    "pouchdb-find": "^7.2.1"
+    "pouchdb-find": "^7.2.1",
+    "uuid": "^7.0.2",
+    "yargs": "^15.1.0"
+  },
+  "devDependencies": {
+    "esmify": "^2.1.1",
+    "nodemon": "^2.0.2"
+  },
+  "nodemonConfig": {
+    "events": {
+      "restart": "browserify ./utils.js -p esmify --standalone App -o static/app.js"
+    },
+    "ignore": [
+      "static/app.js"
+    ]
+  },
+  "scripts": {
+    "start": "node server.js",
+    "devserver": "nodemon --inspect server.js"
   }
 }
